--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -96,11 +96,11 @@ export const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
-          time: "14:00 - 14:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
