--- a/docs/professor/juliano_da_rocha_queiroz.mdx
+++ b/docs/professor/juliano_da_rocha_queiroz.mdx
@@ -14,6 +14,10 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Eletrônica de Potência",
@@ -21,18 +25,15 @@ export const data = {
           teachers: [
             "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: [
-            "ELE2024"
+            "ELE2024",
+            "ELM2024"
           ],
           time: "19:00 - 19:50",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -61,32 +62,6 @@ export const data = {
             "EIN2024"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Eletrônica de Potência",
-          size: 2,
-          teachers: [
-            "Juliano da Rocha Queiroz"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Eletrônica de Potência",
-          size: 2,
-          teachers: [
-            "Juliano da Rocha Queiroz"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
