--- a/docs/professor/leiliane_cristine_de_souza.mdx
+++ b/docs/professor/leiliane_cristine_de_souza.mdx
@@ -50,6 +50,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Orientação de Estágio Supervisionado",
+          size: 1,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023"
+          ],
+          time: "15:55 - 16:45",
+          color: ""
         }
       ]
     },
@@ -63,21 +76,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Orientação de Estágio Supervisionado",
-          size: 1,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2023"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
