--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -18,7 +18,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -85,7 +99,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:55 - 16:45",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
