--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -68,6 +68,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Orientação de Estágio Supervisionado",
+          size: 1,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023"
+          ],
+          time: "15:55 - 16:45",
+          color: ""
+        },
+        {
           subject: "Gestão, Educação e Matemática Financeira",
           size: 2,
           teachers: [
@@ -148,16 +161,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Orientação de Estágio Supervisionado",
-          size: 1,
+          subject: "Informática Instrumental",
+          size: 2,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "AGO2023"
+            "ELE2025"
           ],
-          time: "13:10 - 14:00",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
