--- a/docs/sala/bloco_1/sala_5.mdx
+++ b/docs/sala/bloco_1/sala_5.mdx
@@ -66,6 +66,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:55 - 16:45",
+          color: ""
         }
       ]
     },
@@ -104,10 +117,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia II",
+          subject: "Língua Estrangeira Moderna - Espanhol",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 5",
           students: [
