--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -213,6 +213,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa III",
           size: 1,
           teachers: [
@@ -222,7 +235,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:55 - 16:45",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
