--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -131,6 +131,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Orientação de Estágio Supervisionado",
+          size: 1,
+          teachers: [
+            "Leiliane Cristine de Souza"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023"
+          ],
+          time: "15:55 - 16:45",
+          color: ""
         }
       ]
     },
@@ -239,6 +252,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Educação Física III",
           size: 2,
           teachers: [
@@ -248,33 +274,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Orientação de Estágio Supervisionado",
-          size: 1,
-          teachers: [
-            "Leiliane Cristine de Souza"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2023"
-          ],
           time: "13:10 - 14:00",
-          color: ""
-        },
-        {
-          subject: "Biologia III",
-          size: 2,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "AGO2023"
-          ],
-          time: "14:00 - 14:50",
           color: ""
         },
         {
@@ -287,7 +287,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "15:55 - 16:45",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
