--- a/docs/turma/ele/ele2025.mdx
+++ b/docs/turma/ele/ele2025.mdx
@@ -11,29 +11,16 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
+          subject: "Desenho Técnico",
+          size: 4,
           teachers: [
-            "Wylliam Salviano Gongora"
+            "Darlan Roque Dapieve"
           ],
-          classroom: "",
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: [
             "ELE2025"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Comunicação e Expressão",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "",
-          students: [
-            "ELE2025"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -79,16 +66,29 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Desenho Técnico",
-          size: 4,
+          subject: "Física Aplicada",
+          size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Alex Soares de Brito"
           ],
           classroom: "",
           students: [
             "ELE2025"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "",
+          students: [
+            "ELE2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -102,7 +102,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2025"
           ],
@@ -110,10 +110,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física Aplicada",
+          subject: "Comunicação e Expressão",
           size: 2,
           teachers: [
-            "Alex Soares de Brito"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "",
           students: [
