--- a/docs/turma/elm/elm2024.mdx
+++ b/docs/turma/elm/elm2024.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Resistência dos Materiais",
+          subject: "Elementos de Automação",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Jair Fajardo Junior"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Automação e Robótica Industrial",
           students: [
             "ELM2024"
           ],
@@ -24,12 +24,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Resistência dos Materiais",
+          subject: "Máquinas Elétricas e Acionamentos",
           size: 2,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Wylliam Salviano Gongora"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
           students: [
             "ELM2024"
           ],
@@ -55,12 +55,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Elementos de Automação",
+          subject: "Máquinas Térmicas de Fluxo",
           size: 2,
           teachers: [
-            "Jair Fajardo Junior"
+            "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
+          classroom: "Sala 13-2",
           students: [
             "ELM2024"
           ],
@@ -104,29 +104,17 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Máquinas Térmicas de Fluxo",
-          size: 2,
+          subject: "Eletrônica de Potência",
+          size: 4,
           teachers: [
-            "Luiz Inácio Chaves"
+            "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 13-2",
+          classroom: "",
           students: [
+            "ELE2024",
             "ELM2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Máquinas Elétricas e Acionamentos",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -135,10 +123,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência",
+          subject: "Resistência dos Materiais",
           size: 2,
           teachers: [
-            "Juliano da Rocha Queiroz"
+            "Darlan Roque Dapieve"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -148,10 +136,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Eletrônica de Potência",
+          subject: "Resistência dos Materiais",
           size: 2,
           teachers: [
-            "Juliano da Rocha Queiroz"
+            "Darlan Roque Dapieve"
           ],
           classroom: "Sala 13-2",
           students: [
