--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -68,12 +68,7 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
@@ -88,6 +83,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
