--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -8,29 +8,16 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Resistência dos Materiais",
-          size: 2,
+          subject: "Desenho Técnico",
+          size: 4,
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: [
-            "ELM2024"
+            "ELE2025"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Resistência dos Materiais",
-          size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -72,25 +59,38 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 4,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Resistência dos Materiais",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Resistência dos Materiais",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
