--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -60,10 +60,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência",
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
           teachers: [
-            "Juliano da Rocha Queiroz"
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -78,14 +78,15 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          subject: "Eletrônica de Potência",
           size: 4,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: [
-            "ELE2024"
+            "ELE2024",
+            "ELM2024"
           ],
           time: "19:00 - 19:50",
           color: ""
