--- a/docs/professor/jair_fajardo_junior.mdx
+++ b/docs/professor/jair_fajardo_junior.mdx
@@ -8,19 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Elementos de Automação",
-          size: 2,
-          teachers: [
-            "Jair Fajardo Junior"
-          ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
-          students: [
-            "ELM2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
           subject: "Máquinas, Equipamentos e Instalações Industriais",
           size: 2,
           teachers: [
@@ -37,7 +24,21 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Elementos de Automação",
+          size: 2,
+          teachers: [
+            "Jair Fajardo Junior"
+          ],
+          classroom: "Laboratório de Automação e Robótica Industrial",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
