--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -41,21 +41,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Direito do Trabalho e do consumidor",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "COM2025"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -141,6 +127,19 @@ export const data = {
             "EIN2022"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Direito do Trabalho e do consumidor",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "COM2025"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
