--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -110,7 +110,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "ELE2025"
           ],
