--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -48,6 +48,19 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Projetos Elétricos industriais",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -92,7 +105,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Informática Instrumental",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
