--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -61,6 +61,32 @@ export const data = {
           ],
           time: "15:05 - 15:55",
           color: ""
+        },
+        {
+          subject: "Resistência dos Materiais",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Resistência dos Materiais",
+          size: 2,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -104,19 +130,6 @@ export const data = {
             "ELM2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Máquinas Térmicas de Fluxo",
-          size: 2,
-          teachers: [
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -206,6 +219,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Máquinas Térmicas de Fluxo",
+          size: 2,
+          teachers: [
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -278,29 +304,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Resistência dos Materiais",
-          size: 2,
+          subject: "Eletrônica de Potência",
+          size: 4,
           teachers: [
-            "Darlan Roque Dapieve"
+            "Juliano da Rocha Queiroz"
           ],
           classroom: "Sala 13-2",
           students: [
             "ELM2024"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Resistência dos Materiais",
-          size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
