--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -85,21 +85,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Física Aplicada",
-          size: 2,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -115,6 +101,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Física Aplicada",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "",
+          students: [
+            "ELE2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
