--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -125,10 +125,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          subject: "Eletrônica de Potência",
           size: 4,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Juliano da Rocha Queiroz"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -166,6 +166,19 @@ export const data = {
             "IIW2025A"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
