--- a/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_maquinas_e_acionamentos_eletricos_b4.mdx
@@ -9,21 +9,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Máquinas Elétricas e Acionamentos",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -47,6 +33,19 @@ export const data = {
             "EIN2023"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Máquinas Elétricas e Acionamentos",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Máquinas e Acionamentos Elétricos B4",
+          students: [
+            "ELM2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
