--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "ELE2024"
           ],
@@ -60,10 +60,10 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          subject: "Eletrônica de Potência",
           size: 4,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Juliano da Rocha Queiroz"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -78,15 +78,14 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência",
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
           teachers: [
-            "Juliano da Rocha Queiroz"
+            "Danilo Hungaro Micheletti"
           ],
-          classroom: "",
+          classroom: "Sala 9-2",
           students: [
-            "ELE2024",
-            "ELM2024"
+            "ELE2024"
           ],
           time: "19:00 - 19:50",
           color: ""
