--- a/docs/professor/jose_provetti_junior.mdx
+++ b/docs/professor/jose_provetti_junior.mdx
@@ -26,9 +26,9 @@ export const data = {
           teachers: [
             "José Provetti Júnior"
           ],
-          classroom: "Sala 5",
+          classroom: "Sala 12-2",
           students: [
-            "IIW2023A"
+            "AGO2023"
           ],
           time: "09:25 - 10:15",
           color: ""
@@ -57,11 +57,11 @@ export const data = {
           teachers: [
             "José Provetti Júnior"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 13-2",
           students: [
-            "IIW2024A"
+            "AGO2024"
           ],
-          time: "07:30 - 08:20",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -75,6 +75,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -96,19 +109,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "José Provetti Júnior"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Filosofia II",
           size: 1,
           teachers: [
@@ -126,19 +126,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Filosofia II",
-          size: 1,
-          teachers: [
-            "José Provetti Júnior"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Filosofia 2",
           size: 1,
@@ -182,7 +169,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Filosofia III",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
