--- a/docs/sala/bloco_1/sala_5.mdx
+++ b/docs/sala/bloco_1/sala_5.mdx
@@ -9,21 +9,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Filosofia III",
-          size: 1,
-          teachers: [
-            "José Provetti Júnior"
-          ],
-          classroom: "Sala 5",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -95,7 +81,20 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -148,10 +147,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia II",
+          subject: "Filosofia III",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 5",
           students: [
