--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Projeto Integrador III",
+          size: 1,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
@@ -35,28 +48,14 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Projeto Integrador III",
-          size: 1,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
