--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -52,6 +52,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Literatura e Produção Textual II",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Literatura e Produção Textual I",
           size: 2,
           teachers: [
@@ -125,14 +138,10 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Literatura e Produção Textual II",
-          size: 2,
+          size: 1,
           teachers: [
             "Pedro Leites Junior"
           ],
@@ -144,6 +153,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
