--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -68,16 +68,29 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Biologia II",
-          size: 2,
+          subject: "Literatura e Produção Textual II",
+          size: 1,
           teachers: [
-            "Karina Dias Espartosa"
+            "Pedro Leites Junior"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -169,10 +182,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia II",
+          subject: "Literatura e Produção Textual II",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -213,12 +226,12 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Literatura e Produção Textual II",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Karina Dias Espartosa"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "AGO2024"
           ],
