--- a/docs/professor/vagner_simoes_santos.mdx
+++ b/docs/professor/vagner_simoes_santos.mdx
@@ -31,7 +31,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "IIW2025A"
           ],
@@ -62,7 +62,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "IIW2025A"
           ],
