--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -42,19 +42,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática",
-          size: 1,
-          teachers: [
-            "Vagner Simões Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2025A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Orientação de Estágio Supervisionado",
           size: 1,
           teachers: [
@@ -84,21 +71,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Fundamentos de informática",
-          size: 1,
-          teachers: [
-            "Vagner Simões Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2025A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
