--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -69,6 +69,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "IIW2025A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Informática Básica",
           size: 3,
           teachers: [
@@ -86,6 +99,19 @@ export const data = {
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "IIW2025A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
         {
           subject: "Informática Instrumental",
           size: 2,
