--- a/docs/turma/iiw/iiw2025a.mdx
+++ b/docs/turma/iiw/iiw2025a.mdx
@@ -99,7 +99,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "IIW2025A"
           ],
@@ -182,7 +182,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "IIW2025A"
           ],
